fixed footer spacing

--- a/assets/scss/components/aboutPage/index.scss
+++ b/assets/scss/components/aboutPage/index.scss
@@ -14,7 +14,7 @@
     padding-top: 5vh;
     min-height: 45vh;
     display: flex;
-    padding-bottom: 30px;
+    padding-bottom: 35px;
   }
 }
 
