--- a/assets/scss/components/footer/footer.scss
+++ b/assets/scss/components/footer/footer.scss
@@ -2,7 +2,7 @@
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin: 2vh auto -4vh;
+  margin: 3vh auto -4vh;
   &__nav {
     background: transparent;
     height: 4vh;
